force-app/main/default/objects/COMM_VATNumberRule__mdt/COMM_VATNumberRule__mdt.object-meta.xml
<CustomObject>
    <description>Rules used to validate Taxpayer Identification Number (TIN, VAT or NIF) based on the Records Country Address</description>
    <label>VAT Number Rule</label>
    <pluralLabel>VAT Number Rules</pluralLabel>
</CustomObject>