force-app/main/default/objects/COMM_VATNumberRule__mdt/fields/COMM_CountryShortCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_CountryShortCode__c</fullName>
    <description>The 2 letter country code for the corresponding country</description>
    <label>Country Short Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>