force-app/main/default/objects/COMM_VATNumberRule__mdt/fields/COMM_IsDefault__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply this rule when none of the others can be applied. The VATNumberValidation classes use the country code to find the rule to be applied. If the country code was not provided, use this rule.</description>
    <inlineHelpText>Apply this rule when none of the others can be applied. The VATNumberValidation classes use the country code to find the rule to be applied. If the country code was not provided, use this rule.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>