force-app/main/default/objects/COMM_VATNumberRule__mdt/fields/COMM_Rule__c.field-meta.xml
<CustomField>
    <fullName>COMM_Rule__c</fullName>
    <description>RegExp used for NIF Validation</description>
    <label>Rule</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>