force-app/main/default/objects/COMM_VATNumberRule__mdt/listViews/COMM_LV_All.listView-meta.xml
<ListView>
    <fullName>COMM_LV_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>COMM_CountryShortCode__c</columns>
    <columns>COMM_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with relevant fields</label>
    <language>en_US</language>
</ListView>